checkstyle issues